externalize foundation